@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.5: http://docutils.sourceforge.net/" />
 <title>sqlcmd: A Cross-platform, Cross-database SQL Command Line Tool</title>
 <meta name="author" content="Brian M. Clapper" />
-<meta name="date" content="2008-07-18" />
+<meta name="date" content="2008-07-21" />
 <meta name="copyright" content="Copyright © 2008 Brian M. Clapper" />
 <style type="text/css">
 
@@ -133,7 +133,7 @@ ul.simple li
 <tr><th class="docinfo-name">Contact:</th>
 <td><a class="first last reference external" href="mailto:bmc&#64;clapper.org">bmc&#64;clapper.org</a></td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2008-07-18</td></tr>
+<td>2008-07-21</td></tr>
 <tr class="field"><th class="docinfo-name">Web site:</th><td class="field-body"><a class="reference external" href="http://www.clapper.org/software/python/sqlcmd/">http://www.clapper.org/software/python/sqlcmd/</a></td>
 </tr>
 <tr><th class="docinfo-name">Copyright:</th>
@@ -186,23 +186,25 @@ ul.simple li
 <li><a class="reference internal" href="#commit" id="id25"><tt class="docutils literal"><span class="pre">commit</span></tt></a></li>
 <li><a class="reference internal" href="#connect" id="id26"><tt class="docutils literal"><span class="pre">.connect</span></tt></a></li>
 <li><a class="reference internal" href="#describe" id="id27"><tt class="docutils literal"><span class="pre">.describe</span></tt></a></li>
-<li><a class="reference internal" href="#history" id="id28"><tt class="docutils literal"><span class="pre">.history</span></tt></a></li>
-<li><a class="reference internal" href="#load" id="id29"><tt class="docutils literal"><span class="pre">.load</span></tt></a></li>
-<li><a class="reference internal" href="#r-or-redo" id="id30"><tt class="docutils literal"><span class="pre">r</span></tt> or <tt class="docutils literal"><span class="pre">redo</span></tt></a></li>
-<li><a class="reference internal" href="#rollback" id="id31"><tt class="docutils literal"><span class="pre">rollback</span></tt></a></li>
-<li><a class="reference internal" href="#set" id="id32"><tt class="docutils literal"><span class="pre">.set</span></tt></a></li>
-<li><a class="reference internal" href="#show" id="id33"><tt class="docutils literal"><span class="pre">.show</span></tt></a></li>
+<li><a class="reference internal" href="#echo" id="id28"><tt class="docutils literal"><span class="pre">.echo</span></tt></a></li>
+<li><a class="reference internal" href="#exit" id="id29"><tt class="docutils literal"><span class="pre">.exit</span></tt></a></li>
+<li><a class="reference internal" href="#history" id="id30"><tt class="docutils literal"><span class="pre">.history</span></tt></a></li>
+<li><a class="reference internal" href="#r-or-redo" id="id31"><tt class="docutils literal"><span class="pre">r</span></tt> or <tt class="docutils literal"><span class="pre">redo</span></tt></a></li>
+<li><a class="reference internal" href="#rollback" id="id32"><tt class="docutils literal"><span class="pre">rollback</span></tt></a></li>
+<li><a class="reference internal" href="#run" id="id33"><tt class="docutils literal"><span class="pre">.run</span></tt></a></li>
+<li><a class="reference internal" href="#set" id="id34"><tt class="docutils literal"><span class="pre">.set</span></tt></a></li>
+<li><a class="reference internal" href="#show" id="id35"><tt class="docutils literal"><span class="pre">.show</span></tt></a></li>
 </ul>
 </li>
-<li><a class="reference internal" href="#extended-commands" id="id34">Extended Commands</a><ul>
-<li><a class="reference internal" href="#restrictions" id="id35">Restrictions</a></li>
+<li><a class="reference internal" href="#extended-commands" id="id36">Extended Commands</a><ul>
+<li><a class="reference internal" href="#restrictions" id="id37">Restrictions</a></li>
 </ul>
 </li>
-<li><a class="reference internal" href="#command-history" id="id36">Command History</a></li>
-<li><a class="reference internal" href="#command-completion" id="id37">Command Completion</a></li>
+<li><a class="reference internal" href="#command-history" id="id38">Command History</a></li>
+<li><a class="reference internal" href="#command-completion" id="id39">Command Completion</a></li>
 </ul>
 </li>
-<li><a class="reference internal" href="#license-and-copyright" id="id38">License and Copyright</a></li>
+<li><a class="reference internal" href="#license-and-copyright" id="id40">License and Copyright</a></li>
 </ul>
 </div>
 <div class="section" id="introduction">
@@ -517,6 +519,26 @@ list allows you to refer to the
 database by multiple names</td>
 <td>optional</td>
 </tr>
+<tr><td><tt class="docutils literal"><span class="pre">onconnect</span></tt></td>
+<td><p class="first">Path to a script of commands to
+run just after connecting to
+database. The file can contain
+any valid <em>sqlcmd</em> command
+(including, obviously, SQL).</p>
+<p>Any leading &quot;~&quot; in the path is
+expanding to the home directory
+of the user running <em>sqlcmd</em>.
+Relative paths are assumed to
+be relative to the directory
+containing the configuration
+file.</p>
+<p class="last"><em>Hint</em>: Specify the path using
+Unix-style forward slashes,
+even on Windows, to avoid
+problems with backslashes.</p>
+</td>
+<td>optional</td>
+</tr>
 </tbody>
 </table>
 </blockquote>
@@ -713,16 +735,22 @@ might do something like the following:</p>
 <h1><a class="toc-backref" href="#id18">Using <em>sqlcmd</em></a></h1>
 <p>When run in interactive mode (i.e., without an <em>&#64;file</em> <a class="reference internal" href="#parameters">parameter</a>), <em>sqlcmd</em>
 prompts on standard input with a &quot;?&quot; and waits for commands to be entered,
-executing each one as it's entered.</p>
+executing each one as it's entered. It continues to prompt for commands until
+either:</p>
+<ul class="simple">
+<li>it encounters an end-of-file condition (Ctrl-D on Unix systems, Ctrl-Z
+on Windows), or</li>
+<li>you type the <tt class="docutils literal"><span class="pre">.exit</span></tt> command.</li>
+</ul>
 <p>Some commands (e.g., all SQL commands, and some others) are not executed until
 a final &quot;;&quot; character is seen on the input; this permits multi-line commands.
-Other commands, such as internal commands like <tt class="docutils literal"><span class="pre">.set</span></tt>, are single-line commands
-and do not require a semi-colon.</p>
+Other commands, such as internal commands like <tt class="docutils literal"><span class="pre">.set</span></tt>, are single-line
+commands and do not require a semi-colon.</p>
 <p>Before going into each specific type of command, here's a brief <em>sqlcmd</em>
 transcript, to whet your appetite:</p>
 <div class="code-block text">
 <div class="highlight"><pre>$ sqlcmd mydb
-SQLCmd, version 0.1 ($Revision: 7846 $)
+SQLCmd, version 0.3 ($Revision: 7890 $)
 Copyright 2008 Brian M. Clapper.
 
 Type &quot;help&quot; or &quot;?&quot; for help.
@@ -944,27 +972,29 @@ userak1 Columns:     (companyid, username)
 
 </div>
 </div>
-<div class="section" id="history">
-<h3><a class="toc-backref" href="#id28"><tt class="docutils literal"><span class="pre">.history</span></tt></a></h3>
-<p><tt class="docutils literal"><span class="pre">.history</span></tt> displays the command history. See <a class="reference internal" href="#command-history">Command History</a> for a
-complete explanation of <em>sqlcmd</em>'s command history capabilities.</p>
-</div>
-<div class="section" id="load">
-<h3><a class="toc-backref" href="#id29"><tt class="docutils literal"><span class="pre">.load</span></tt></a></h3>
-<p>Loads an external file of commands (typically SQL) and runs those commands in
-the current session <em>without exiting</em>. After the commands are run, <em>sqlcmd</em>
-returns to its interactive prompt. <tt class="docutils literal"><span class="pre">.load</span></tt> can be invoked in several ways:</p>
+<div class="section" id="echo">
+<h3><a class="toc-backref" href="#id28"><tt class="docutils literal"><span class="pre">.echo</span></tt></a></h3>
+<p>Echoes all remaining arguments to standard output. This command is useful
+primarily in scripts.</p>
+<p>Example:</p>
 <div class="code-block text">
-<div class="highlight"><pre>.load path
-@ path
-@path
+<div class="highlight"><pre>.echo Don&#39;t look now, but I&#39;m about to run SELECT
 </pre></div>
 
 </div>
-<p>All three commands do exactly the same thing.</p>
+</div>
+<div class="section" id="exit">
+<h3><a class="toc-backref" href="#id29"><tt class="docutils literal"><span class="pre">.exit</span></tt></a></h3>
+<p>Exit <em>sqlcmd</em>. <tt class="docutils literal"><span class="pre">.exit</span></tt> is equivalent to typing the key sequence corresponding
+to an end-of-file condition (Ctrl-D on Unix systems, Ctrl-Z on Windows).</p>
+</div>
+<div class="section" id="history">
+<h3><a class="toc-backref" href="#id30"><tt class="docutils literal"><span class="pre">.history</span></tt></a></h3>
+<p><tt class="docutils literal"><span class="pre">.history</span></tt> displays the command history. See <a class="reference internal" href="#command-history">Command History</a> for a
+complete explanation of <em>sqlcmd</em>'s command history capabilities.</p>
 </div>
 <div class="section" id="r-or-redo">
-<h3><a class="toc-backref" href="#id30"><tt class="docutils literal"><span class="pre">r</span></tt> or <tt class="docutils literal"><span class="pre">redo</span></tt></a></h3>
+<h3><a class="toc-backref" href="#id31"><tt class="docutils literal"><span class="pre">r</span></tt> or <tt class="docutils literal"><span class="pre">redo</span></tt></a></h3>
 <p>Re-issue a command from the history. General usage:</p>
 <div class="code-block text">
 <div class="highlight"><pre>r [num|str]
@@ -995,7 +1025,7 @@ is re-run.</p>
 </div>
 </div>
 <div class="section" id="rollback">
-<h3><a class="toc-backref" href="#id31"><tt class="docutils literal"><span class="pre">rollback</span></tt></a></h3>
+<h3><a class="toc-backref" href="#id32"><tt class="docutils literal"><span class="pre">rollback</span></tt></a></h3>
 <p>Roll the current transaction back. Ignored if <tt class="docutils literal"><span class="pre">autocommit</span></tt> is enabled. For
 compatibility with SQL scripts, this command does not begin with a &quot;.&quot;.</p>
 <p>See also:</p>
@@ -1005,8 +1035,21 @@ compatibility with SQL scripts, this command does not begin with a &quot;.&quot;
 <li><a class="reference internal" href="#commit">commit</a></li>
 </ul>
 </div>
+<div class="section" id="run">
+<h3><a class="toc-backref" href="#id33"><tt class="docutils literal"><span class="pre">.run</span></tt></a></h3>
+<p>Loads an external file of commands (typically SQL) and runs those commands in
+the current session <em>without exiting</em>. After the commands are run, <em>sqlcmd</em>
+returns to its interactive prompt. <tt class="docutils literal"><span class="pre">.run</span></tt> can also be invoked as <tt class="docutils literal"><span class="pre">.load</span></tt>.</p>
+<div class="code-block text">
+<div class="highlight"><pre>.run path
+.load path
+</pre></div>
+
+</div>
+<p>Both commands do exactly the same thing.</p>
+</div>
 <div class="section" id="set">
-<h3><a class="toc-backref" href="#id32"><tt class="docutils literal"><span class="pre">.set</span></tt></a></h3>
+<h3><a class="toc-backref" href="#id34"><tt class="docutils literal"><span class="pre">.set</span></tt></a></h3>
 <p>The <tt class="docutils literal"><span class="pre">.set</span></tt> command displays or alters internal <em>sqlcmd</em> variables. Without
 any parameters, <tt class="docutils literal"><span class="pre">.set</span></tt> displays all internal variables and their values:</p>
 <div class="code-block text">
@@ -1082,13 +1125,13 @@ statements.</td>
 </blockquote>
 </div>
 <div class="section" id="show">
-<h3><a class="toc-backref" href="#id33"><tt class="docutils literal"><span class="pre">.show</span></tt></a></h3>
+<h3><a class="toc-backref" href="#id35"><tt class="docutils literal"><span class="pre">.show</span></tt></a></h3>
 <p>The <tt class="docutils literal"><span class="pre">.show</span></tt> command currently only supports one parameter: <tt class="docutils literal"><span class="pre">tables</span></tt>.
 It's used to display the names of all tables in the database.</p>
 </div>
 </div>
 <div class="section" id="extended-commands">
-<h2><a class="toc-backref" href="#id34">Extended Commands</a></h2>
+<h2><a class="toc-backref" href="#id36">Extended Commands</a></h2>
 <p>If you type a command that <em>sqlcmd</em> doesn't recognize as a SQL command or one
 of its internal commands, it passes the command straight through to the
 database and treats the command as it would treate a SQL <tt class="docutils literal"><span class="pre">SELECT</span></tt>. This
@@ -1136,7 +1179,7 @@ Execution time: 0.054 seconds
 
 </div>
 <div class="section" id="restrictions">
-<h3><a class="toc-backref" href="#id35">Restrictions</a></h3>
+<h3><a class="toc-backref" href="#id37">Restrictions</a></h3>
 <ul class="simple">
 <li>Some extended commands don't work well through <em>sqlcmd</em>. Your mileage
 may vary.</li>
@@ -1147,7 +1190,7 @@ themselves.</li>
 </div>
 </div>
 <div class="section" id="command-history">
-<h2><a class="toc-backref" href="#id36">Command History</a></h2>
+<h2><a class="toc-backref" href="#id38">Command History</a></h2>
 <p><em>sqlcmd</em> supports a <a class="reference external" href="http://www.gnu.org/software/bash/manual/">bash</a>-like command history mechanism. Every command
 you type at the command prompt is saved in an internal memory buffer, accessible
 via the <tt class="docutils literal"><span class="pre">.history</span></tt> command.</p>
@@ -1180,7 +1223,7 @@ History files always end with &quot;.hist&quot;.</p>
 the history file for the second database is <tt class="docutils literal"><span class="pre">$HOME/.sqlcmd/customers.hist.</span></tt></p>
 </div>
 <div class="section" id="command-completion">
-<h2><a class="toc-backref" href="#id37">Command Completion</a></h2>
+<h2><a class="toc-backref" href="#id39">Command Completion</a></h2>
 <p><em>sqlcmd</em> supports TAB-completion in various places, in the manner of the GNU
 <a class="reference external" href="http://www.gnu.org/software/bash/manual/">bash</a> shell. TAB-completion is (mostly) context sensitive. For example:</p>
 <dl class="docutils">
@@ -1220,7 +1263,7 @@ table names; it is not currently sensitive to SQL syntax.</dd>
 </div>
 </div>
 <div class="section" id="license-and-copyright">
-<h1><a class="toc-backref" href="#id38">License and Copyright</a></h1>
+<h1><a class="toc-backref" href="#id40">License and Copyright</a></h1>
 <p>Copyright © 2008 Brian M. Clapper</p>
 <p>This is free software, released under the following BSD-like license:</p>
 <p>Redistribution and use in source and binary forms, with or without
