@@ -3,6 +3,8 @@ $Id$
 
 Version 0.3 (...)
 
+- Ctrl-C (SIGINT) at the command prompt now simply returns to the command
+  prompt without doing anything, instead of exiting sqlcmd.
 - Added .echo command
 - Added ability to specify an on-connect script for each database listed
   in the configuration file. sqlcmd runs the on-connect script,  immediately
